# IDMS

./: .env.example  .gitignore  .pre-commit-config.yaml  COMMERCIAL_STRATEGY.md  DEMO_SCRIPT.md  Makefile
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/app/: main.py
api/app/api/v1/: ai.py  auth.py  documents.py  health.py  search.py  templates.py  users.py
api/app/core/: config.py  db.py  deps.py  logging.py  security.py  telemetry.py
api/app/models/: api_usage.py  audit_log.py  chunk.py  document.py  organization.py  template.py  user.py
api/app/repositories/: chunk.py  document.py  organization.py  user.py
api/app/schemas/: ai.py  auth.py  document.py  search.py  template.py  user.py
api/app/services/: ai.py  auth.py  embed.py  extraction.py  ocr.py  search.py  storage.py  upload.py
api/app/workers/: celery_app.py  tasks.py
api/migrations/: env.py
api/migrations/versions/: 001_baseline.py  002_auth_multitenancy.py  003_documents.py  004_chunks_vectors.py  005_extraction_templates.py
api/scripts/: migrate.sh
api/tests/: conftest.py
api/tests/integration/: test_ai.py  test_auth.py  test_bulk_actions.py  test_documents.py  test_health.py  test_search.py
api/tests/security/: test_tenant_isolation.py
api/tests/unit/: test_config.py
docs/: IDMS_Implementation_Playbook.md
docs/superpowers/plans/: 2026-06-15-idms-phase-0-foundation.md  2026-06-15-idms-phase-1-auth-multitenancy.md  2026-06-16-idms-phase-2-upload-ocr.md  2026-06-17-idms-phase-3-search-embeddings.md  2026-06-20-bulk-upload-actions-export.md
docs/superpowers/specs/: 2026-06-20-bulk-upload-actions-export-design.md  2026-06-21-document-comparison-design.md  2026-06-21-document-preview-design.md
infra/: docker-compose.yml
infra/scripts/: seed.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/app/(auth)/login/: page.tsx
web/app/(auth)/register/: page.tsx
web/app/dashboard/: page.tsx
web/components/: AiChat.tsx  ConfirmDeleteModal.tsx  DocumentCompare.tsx  DocumentCompareModal.tsx  DocumentList.tsx  DocumentPreviewModal.tsx  DocumentSelector.tsx  DocumentViewer.tsx  ExtractionsPanel.tsx  SearchBox.tsx  UploadZone.tsx
web/lib/: api.ts  auth.ts
